objects/Account_Summary__c.object
<CustomObject>
    <description>Only store summary account information, for portal access purpose</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Summaries</relationshipLabel>
        <relationshipName>Account_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Locality__c</fullName>
        <label>Billing Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sell 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Summaries</relationshipLabel>
        <relationshipName>Account_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sell 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Summaries (Sell 2)</relationshipLabel>
        <relationshipName>Account_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spot_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spot 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Summaries (Spot 1)</relationshipLabel>
        <relationshipName>Spot1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spot_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spot 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Summaries (Spot 2)</relationshipLabel>
        <relationshipName>spot2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Summary</label>
    <nameField>
        <label>Account Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>